# car-game

./: .python-version  README.md  pyproject.toml  track-generator.xcf
car_game/: AICar.py  Car.py  Game.py  PlayerCar.py  Track.py  __init__.py  __main__.py  config-feedforward.txt  globals.py  main.py  run_ai.py  train_ai.py  utils.py
car_game/ai_models/: neat_model_1715825448.9561605.pkl
