[tool.poetry]
name = "car-game"
version = "0.1.0"
description = ""
authors = ["Sillas Reis <sillas.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
neat-python = "^0.92"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
